# nanoGPT

./: .gitignore  pyproject.toml  sample.py
my_runs/: shakespeare-on-mac.md
